--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <nav>
         <a href="#profile-section">Home</a>
         <a href="#teaching">Teaching</a>
-        <a href="/experience">Experience</a>
+        <!--<a href="/experience">Experience</a>-->
         <a href="/project">Project</a>
         <a href="/research">Research</a>
-        <!--<a href="/cv">CV</a>-->
         <!--<a href="/gallary">Gallary</a>-->
         <a href="/contact">Contact</a>
         <a href="/test2">Test2</a>
@@ -137,10 +136,9 @@
             <p class="date-location">January 2023 – Present · Seattle, WA</p>
             <ul>
               <li>Lead EE 215 TA starting from Winter 2023.</li>
-              <li>Prepare review materials, conduct quiz/review sessions, and prepare exam problems.</li>
+              <li>Prepare review materials, conduct quiz/review sessions, and prepare exam/quiz problems.</li>
               <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
-              <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
-              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023.
+              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).
             </ul>
           </div>
           <div class="circle"></div>
