--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <h1>Kevin Shao</h1>
       <nav>
         <a href="#profile-section">Home</a>
+        <a href="#research">Research</a>
+        <a href="/project">Project</a>
         <a href="#teaching">Teaching</a>
         <!--<a href="/experience">Experience</a>-->
-        <a href="/project">Project</a>
-        <a href="/research">Research</a>
         <!--<a href="/gallary">Gallary</a>-->
-        <a href="/contact">Contact</a>
+        <!--<a href="/contact">Contact</a>-->
       </nav>
     </section>
 
@@ -120,6 +120,49 @@
     <!-- <section id="selected-project">
       <p>TBD</p>
     </section> -->
+    <section id="research">
+      <h2>Academic Reseearch Experiences</h2>
+      <div class="timeline-container">
+
+        <!-- First teaching experience -->
+        <div class="teaching-card card1">
+          <div class="teaching-logo">
+            <img src="img/uw.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Graduate Teaching Assistant</h3>
+            <p class="organization">University of Washington</p>
+            <p class="date-location">January 2023 – Present · Seattle, WA</p>
+            <ul>
+              <li>Lead EE 215 TA starting from Winter 2023.</li>
+              <li>Prepare review materials, conduct quiz/review sessions, and prepare exam/quiz problems.</li>
+              <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
+              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).
+            </ul>
+          </div>
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
+
+        <!-- Second teaching experience -->
+        <div class="teaching-card card2">
+          <div class="teaching-logo">
+            <img src="img/osu.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Undergraduate Teaching Assistant</h3>
+            <p class="organization">The Ohio State University</p>
+            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+          <div class="circle"></div>
+          <div class="lineToo"></div>
+        </div>
+      </div>
+    </section>
+
     <section id="teaching">
       <h2>Teaching Experiences</h2>
       <div class="timeline-container">
