--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <li>Lead EE 215 TA starting from Winter 2023.</li>
               <li>Prepare review materials, conduct quiz/review sessions, and prepare exam/quiz problems.</li>
               <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
-              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).
+              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).</li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -197,7 +197,11 @@
             <p class="organization">The Ohio State University</p>
             <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
             <ul>
-              <li>TBD</li>
+              <li>Explored and led in-depth on various classical topics and design projects in the engineering field ranging from designing self-protection devices to safer storage system for grains with instructional team and students in the phase of the problem definition involved research plan, user needs, and value proposition, concept development, and detailed design.</li>
+			        <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures.</li>
+				      <li>Graded assignments, hold office hours, and conducted review sessions to help students prepare for exams.</li>
+              <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering.</li>
+              <li>Served courses: Fundamentals of Engineering 1181 and 1182</li>
             </ul>
           </div>
           <div class="circle"></div>
