--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <nav>
         <a href="#profile-section">Home</a>
         <a href="#research">Research</a>
-        <a href="/project">Project</a>
+        <a href="#project">Project</a>
         <a href="#teaching">Teaching</a>
         <!--<a href="/experience">Experience</a>-->
         <!--<a href="/gallary">Gallary</a>-->
-        <!--<a href="/contact">Contact</a>-->
+        <a href="/contact">Contact</a>
       </nav>
     </section>
 
@@ -161,6 +161,11 @@
           <div class="lineToo"></div>
         </div>
       </div>
+    </section>
+
+    <section id="project">
+      <h2>Selected Projects</h2>
+      <div class="timeline-container">
     </section>
 
     <section id="teaching">
