--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
         </div>
       </div>
     </section>
-    <!-- <section id="selected-project">
-      <p>TBD</p>
-    </section> -->
+
     <section id="research">
       <h2>Academic Reseearch Experiences</h2>
       <div class="timeline-container">
@@ -130,14 +128,11 @@
             <img src="img/uw.png" alt="University Logo">
           </div>
           <div class="teaching-details">
-            <h3>Graduate Teaching Assistant</h3>
+            <h3>Graduate Research Assistant</h3>
             <p class="organization">University of Washington</p>
-            <p class="date-location">January 2023 – Present · Seattle, WA</p>
+            <p class="date-location">June 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>Lead EE 215 TA starting from Winter 2023.</li>
-              <li>Prepare review materials, conduct quiz/review sessions, and prepare exam/quiz problems.</li>
-              <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
-              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).
+              <li>TBD</li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -147,12 +142,12 @@
         <!-- Second teaching experience -->
         <div class="teaching-card card2">
           <div class="teaching-logo">
-            <img src="img/osu.png" alt="University Logo">
+            <img src="img/uw.png" alt="University Logo">
           </div>
           <div class="teaching-details">
-            <h3>Undergraduate Teaching Assistant</h3>
-            <p class="organization">The Ohio State University</p>
-            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+            <h3>Graduate Research Assistant</h3>
+            <p class="organization">University of Washington</p>
+            <p class="date-location">March 2023 – September 2024 · Seattle, WA</p>
             <ul>
               <li>TBD</li>
             </ul>
