--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
     <section id="research">
       <h2>Academic Reseearch Experiences</h2>
+      <p>Under Construction</p>
       <div class="timeline-container">
 
         <!-- First teaching experience -->
@@ -160,7 +161,7 @@
 
     <section id="project">
       <h2>Selected Projects</h2>
-      <div class="timeline-container">
+      <p>Under Construction</p>
     </section>
 
     <section id="teaching">
