--- a/index.html
+++ b/index.html
@@ -154,6 +154,23 @@
             </ul>
           </div>
           <div class="circle"></div>
+          <div class="line"></div>
+          <div class="lineToo"></div>
+        </div>
+
+        <div class="teaching-card card3">
+          <div class="teaching-logo">
+            <img src="img/osu.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Undergraduate Research Assistant Lead</h3>
+            <p class="organization">The Ohio State University</p>
+            <p class="date-location">August 2021 – May 2022 · Columbus, OH</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+          <div class="circle"></div>
           <div class="lineToo"></div>
         </div>
       </div>
