--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">June 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>TBD</li>
+              <li>Advisor: </li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -150,7 +150,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">March 2023 – September 2024 · Seattle, WA</p>
             <ul>
-              <li>TBD</li>
+              <li>Advisor: <a href="https://www.linkedin.com/in/jaylcunningham/">Jay Cunningham</a>, <a href="https://www.linkedin.com/in/jaylcunningham/">Julie Kientz</a>, <a href="https://www.hcde.washington.edu/rosner">Daniela Rosner</a></li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -167,7 +167,7 @@
             <p class="organization">The Ohio State University</p>
             <p class="date-location">August 2021 – May 2022 · Columbus, OH</p>
             <ul>
-              <li>TBD</li>
+              <li>Advsior: </li>
             </ul>
           </div>
           <div class="circle"></div>
