--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">June 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>Advisor: </li>
+              <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -167,7 +167,7 @@
             <p class="organization">The Ohio State University</p>
             <p class="date-location">August 2021 – May 2022 · Columbus, OH</p>
             <ul>
-              <li>Advsior: </li>
+              <li>Advsior: <a href="https://ece.osu.edu/people/potter.36">Lee Potter</a></li>
             </ul>
           </div>
           <div class="circle"></div>
