--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <img src="img/uw.png" alt="University Logo">
           </div>
           <div class="teaching-details">
-            <h3>Graduate Research Assistant</h3>
+            <h3>PhD Student Researcher</h3>
             <p class="organization">University of Washington</p>
             <p class="date-location">June 2024 – Present · Seattle, WA</p>
             <ul>
