--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <section id="research">
-      <h2>Academic Reseearch Experiences</h2>
+      <h2>Academic Research Experiences</h2>
       <p>Under Construction</p>
       <div class="timeline-container">
 
@@ -131,7 +131,7 @@
           <div class="teaching-details">
             <h3>PhD Student Researcher</h3>
             <p class="organization">University of Washington</p>
-            <p class="date-location">June 2024 – Present · Seattle, WA</p>
+            <p class="date-location">September 2024 – Present · Seattle, WA</p>
             <ul>
               <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
             </ul>
