--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <p class="date-location">September 2024 – Present · Seattle, WA</p>
             <ul>
               <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
+              <li>Research in STEM Education (post-secondary), Education Technologies, and Accessibility</li>
             </ul>
           </div>
           <div class="circle"></div>
