--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">September 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
               <li>Research in STEM Education (post-secondary), Education Technologies, and Accessibility</li>
+              <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
             </ul>
           </div>
           <div class="circle"></div>
@@ -151,6 +151,8 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">March 2023 – September 2024 · Seattle, WA</p>
             <ul>
+              <li>TBD</li>
+              <li>TBD</li>
               <li>Advisor: <a href="https://www.linkedin.com/in/jaylcunningham/">Jay Cunningham</a>, <a href="https://www.linkedin.com/in/jaylcunningham/">Julie Kientz</a>, <a href="https://www.hcde.washington.edu/rosner">Daniela Rosner</a></li>
             </ul>
           </div>
@@ -168,6 +170,8 @@
             <p class="organization">The Ohio State University</p>
             <p class="date-location">August 2021 – May 2022 · Columbus, OH</p>
             <ul>
+              <li>TBD</li>
+              <li>TBD</li>
               <li>Advsior: <a href="https://ece.osu.edu/people/potter.36">Lee Potter</a></li>
             </ul>
           </div>
