--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
             <p class="organization">The Ohio State University</p>
             <p class="date-location">August 2021 – May 2022 · Columbus, OH</p>
             <ul>
-              <li>TBD</li>
+              <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University
+                (OSU) invention disclosure T2022-060.</li>
               <li>TBD</li>
               <li>Advsior: <a href="https://ece.osu.edu/people/potter.36">Lee Potter</a></li>
             </ul>
