--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">January 2023 – Present · Seattle, WA</p>
             <ul>
-              <li>Lead EE 215 TA starting from Winter 2023.</li>
+              <li>Serve as EE 215 Lead TA starting from Winter 2023.</li>
               <li>Prepare review materials, conduct quiz/review sessions, and prepare exam/quiz problems.</li>
               <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
               <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023 (led by Prof. Karl Böhringer).</li>
@@ -225,7 +225,7 @@
 			        <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures.</li>
 				      <li>Graded assignments, hold office hours, and conducted review sessions to help students prepare for exams.</li>
               <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering.</li>
-              <li>Served courses: Fundamentals of Engineering 1181 and 1182</li>
+              <li>Served courses: Fundamentals of Engineering 1181 and 1182.</li>
             </ul>
           </div>
           <div class="circle"></div>
