--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">September 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>Research in STEM Education (post-secondary), Education Technologies, and Accessibility</li>
+              <li>Research in Human-Computer Interaction (Education Technologies), STEM Education (post-secondary), and Accessibility</li>
               <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
             </ul>
           </div>
@@ -151,8 +151,8 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">March 2023 – September 2024 · Seattle, WA</p>
             <ul>
-              <li>TBD</li>
-              <li>TBD</li>
+              <li>Researched on how NLP technologists' design decisions impact fairness, representation, and bias particularly among linguistically and ethnically diverse user groups</li>
+              <li>Surfaced practical recommendations for industry-wide standards and best practices in NLP dataset production, emphasizing equitable and responsible AI development.</li>
               <li>Advisor: <a href="https://www.linkedin.com/in/jaylcunningham/">Jay Cunningham</a>, <a href="https://www.linkedin.com/in/jaylcunningham/">Julie Kientz</a>, <a href="https://www.hcde.washington.edu/rosner">Daniela Rosner</a></li>
             </ul>
           </div>
@@ -172,7 +172,9 @@
             <ul>
               <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University
                 (OSU) invention disclosure T2022-060.</li>
-              <li>TBD</li>
+              <li>Designed, constructed, and operated a narrowband sparse sensor array to estimate direction of arrival (DoA).</li>
+              <li>Utilized MATLAB programs and MLE estimator to determine DoAs from relative phases of each sensor in the
+                linear and planar sparse array geometries.</li>
               <li>Advsior: <a href="https://ece.osu.edu/people/potter.36">Lee Potter</a></li>
             </ul>
           </div>
