--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#research">Research</a>
         <a href="#project">Project</a>
         <a href="#teaching">Teaching</a>
-        <a href="#publications">Teaching</a>
+        <a href="#publications">Publications</a>
         <!--<a href="/experience">Experience</a>-->
         <!--<a href="/gallary">Gallary</a>-->
         <a href="/contact">Contact</a>
