--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <script src="test2.js"></script>
 	</head>
 	<body>
-    <section id="nav-bar">
-      <h1>Kevin Shao</h1>
-      <nav>
-        <a href="#profile-section">Home</a>
-        <a href="#research">Research</a>
-        <a href="#project">Project</a>
-        <a href="#teaching">Teaching</a>
-        <a href="#publications">Publications</a>
-        <!--<a href="/experience">Experience</a>-->
-        <!--<a href="/gallary">Gallary</a>-->
-        <a href="/contact">Contact</a>
-      </nav>
-    </section>
+    <header>
+      <section id="nav-bar">
+        <h1>Kevin Shao</h1>
+        <nav>
+          <a href="#profile-section">Home</a>
+          <a href="#research">Research</a>
+          <a href="#project">Project</a>
+          <a href="#teaching">Teaching</a>
+          <a href="#publications">Publications</a>
+          <!--<a href="/experience">Experience</a>-->
+          <!--<a href="/gallary">Gallary</a>-->
+          <!--<a href="/contact">Old Site</a>-->
+        </nav>
+      </section>
+    </header>
 
     <!--<header>
       <h1 class="h1-header">ABOUT ME</h1>
@@ -121,7 +123,6 @@
 
     <section id="research">
       <h2>Academic Research Experiences</h2>
-      <p>Under Construction</p>
       <div class="timeline-container">
 
         <!-- First teaching experience -->
@@ -134,7 +135,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">September 2024 – Present · Seattle, WA</p>
             <ul>
-              <li>Research in Human-Computer Interaction (Education Technologies), STEM Education (post-secondary), and Accessibility</li>
+              <li>Research in Human-Computer Interaction (Education Technologies), STEM Education (post-secondary), and Accessibility.</li>
               <li>Advisor: <a href="https://people.ece.uw.edu/wilson/">Denise Wilson</a>, <a href="https://people.ece.uw.edu/makhsous/">Sep Makhsous</a></li>
             </ul>
           </div>
@@ -152,7 +153,7 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">March 2023 – September 2024 · Seattle, WA</p>
             <ul>
-              <li>Researched on how NLP technologists' design decisions impact fairness, representation, and bias particularly among linguistically and ethnically diverse user groups</li>
+              <li>Researched on how NLP technologists' design decisions impact fairness, representation, and bias particularly among linguistically and ethnically diverse user groups.</li>
               <li>Surfaced practical recommendations for industry-wide standards and best practices in NLP dataset production, emphasizing equitable and responsible AI development.</li>
               <li>Advisor: <a href="https://www.linkedin.com/in/jaylcunningham/">Jay Cunningham</a>, <a href="https://www.linkedin.com/in/jaylcunningham/">Julie Kientz</a>, <a href="https://www.hcde.washington.edu/rosner">Daniela Rosner</a></li>
             </ul>
@@ -186,8 +187,46 @@
     </section>
 
     <section id="project">
-      <h2>Selected Projects</h2>
-      <p>Under Construction</p>
+      <h2>Selected Projects (Under Construction)</h2>
+      <div class="project-card">
+        <div class="project-logo">
+          <img src="img/arch-chat.png" alt="TBD">
+        </div>
+        <div class="project-content">
+          <h3>EquityEngine: A Pathway to Inclusive and Personalized Engineering Education</h3>
+          <p>Project description (COMING SOON)</p>
+          <!--<div class="project-links">
+            <button onclick="location.href='URL_TO_SLIDES'">Slides</button>
+            <button onclick="location.href='URL_TO_GITHUB'">GitHub</button>
+          </div>-->
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-logo">
+          <img src="img/nlp-bias.png" alt="TBD">
+        </div>
+        <div class="project-content">
+          <h3>Responsibility and Representation in Natural Language Processing (NLP) Data Practice</h3>
+          <p>Project description (COMING SOON)</p>
+          <!--<div class="project-links">
+            <button onclick="location.href='URL_TO_SLIDES'">Slides</button>
+            <button onclick="location.href='URL_TO_GITHUB'">GitHub</button>
+          </div>-->
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-logo">
+          <img src="img/ev-sys-dig.png" alt="TBD">
+        </div>
+        <div class="project-content">
+          <h3>Making Electric Vehicle Charging Fun</h3>
+          <p>Project description (COMING SOON)</p>
+          <!--<div class="project-links">
+            <button onclick="location.href='URL_TO_SLIDES'">Slides</button>
+            <button onclick="location.href='URL_TO_GITHUB'">GitHub</button>
+          </div>-->
+        </div>
+      </div>
     </section>
 
     <section id="teaching">
@@ -238,14 +277,46 @@
     </section>
 
     <section id="publications">
-      <h2>Recent Publications</h2>
-      <p>Under Construction</p>
+      <div class="left-section">
+        <h2>Recent Publications</h2>
+      </div>
+      <div class="right-section">
+        <ul>
+            <li>
+                <span>📄</span>
+                <p>Kevin Shao, et al. (2025). <strong>Bridging Educational Equity Gaps: A Systematic Review of AI-Driven and New Technologies for Students Living with Disabilities in STEM Education.</strong> ASEE CoNECD (Collaborative Network for Engineering and Computing Diversity) 2025.</p>
+                <div class="links">
+                    <a>PDF (COMING SOON)</a>
+                    <a>Cite (COMING SOON)</a>
+                    <!--<a href="#">DOI</a>-->
+                </div>
+            </li>
+            <!-- Repeat similar blocks for other publications -->
+        </ul>
+        <!--<a href="#" class="see-all">SEE ALL PUBLICATIONS ></a>-->
+      </div>
+    </section>
+
+    <section id="talks">
+      <div class="left-section">
+        <h2>Talks & Presentations</h2>
+      </div>
+      <div class="right-section">
+        <h2>COMING SOON</h2>
+      </div>
     </section>
 
 		<footer>
-      <p class="centered">
-        Site created by Kevin Shao. All other attributions cited in page source.
-      </p>
+      <div class="footer-section left">
+        <p id="last-updated">Last Updated: <span id="update-date"></span></p>
+      </div>
+      <div class="footer-section center">
+        <p>
+          <!--Site created by Kevin Shao. All other attributions cited in page source.-->
+          © Kevin Shao. All Rights Reserved.
+        </p>
+      </div>
+      <div class="footer-section right"></div> <!-- Invisible spacer -->
     </footer>
 	</body>
 </html>
