--- a/index.html
+++ b/index.html
@@ -203,6 +203,22 @@
       </div>
       <div class="project-card">
         <div class="project-logo">
+          <img src="img/overview_paper.png" alt="TBD">
+        </div>
+        <div class="project-content">
+          <h3><a href="/project2.html">DawgSense</a></h3>
+          <p>DawgSense supports dog owners in managing their pets' reactive behaviors in stressful situations
+            by providing tools for real-time response and insight into preventive measures. This dual approach
+            enhances immediate handling of behavioral challenges and fosters long-term understanding, boosting
+            owner confidence and strengthening the pet-owner bond.</p>
+          <!--<div class="project-links">
+            <button onclick="location.href='URL_TO_SLIDES'">Slides</button>
+            <button onclick="location.href='URL_TO_GITHUB'">GitHub</button>
+          </div>-->
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-logo">
           <img src="img/nlp-bias.png" alt="TBD">
         </div>
         <div class="project-content">
@@ -219,8 +235,15 @@
           <img src="img/ev-sys-dig.png" alt="TBD">
         </div>
         <div class="project-content">
-          <h3>Making Electric Vehicle Charging Fun</h3>
-          <p>Project description (COMING SOON)</p>
+          <h3><a href="/project4.html">Making Electric Vehicle Charging Fun</a></h3>
+          <p>
+            The project aimed to create the ideal EV charging experience. The team worked with a 2023
+            Mach E GT to provide a reliable and accurate assessment of whether or not chargers are working,
+            to generate a more positive charging experience for EV owners; the long-term goal is to develop
+            an end-to-end plan for the charging experience of tomorrow — from modeling in-vehicle hardware
+            and software enhancements that will improve battery capacity and range to making recommendations
+            for grid integration and infrastructure updates.
+          </p>
           <!--<div class="project-links">
             <button onclick="location.href='URL_TO_SLIDES'">Slides</button>
             <button onclick="location.href='URL_TO_GITHUB'">GitHub</button>
@@ -234,7 +257,7 @@
       <div class="timeline-container">
 
         <!-- First teaching experience -->
-        <div class="teaching-card card1">
+        <div class="teaching-card">
           <div class="teaching-logo">
             <img src="img/uw.png" alt="University Logo">
           </div>
