--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <img src="img/overview_paper.png" alt="TBD">
         </div>
         <div class="project-content">
-          <h3><a href="/dawgsense.html">DawgSense</a></h3>
+          <h3><a href="dawgsense/">DawgSense</a></h3>
           <p>DawgSense supports dog owners in managing their pets' reactive behaviors in stressful situations
             by providing tools for real-time response and insight into preventive measures. This dual approach
             enhances immediate handling of behavioral challenges and fosters long-term understanding, boosting
