--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <img src="img/overview_paper.png" alt="TBD">
         </div>
         <div class="project-content">
-          <h3><a href="dawgsense/">DawgSense</a></h3>
+          <h3><a href="/project/dawgsense">DawgSense</a></h3>
           <p>DawgSense supports dog owners in managing their pets' reactive behaviors in stressful situations
             by providing tools for real-time response and insight into preventive measures. This dual approach
             enhances immediate handling of behavioral challenges and fosters long-term understanding, boosting
@@ -235,7 +235,7 @@
           <img src="img/ev-sys-dig.png" alt="TBD">
         </div>
         <div class="project-content">
-          <h3><a href="/makingevchargingfun.html">Making Electric Vehicle Charging Fun</a></h3>
+          <h3><a href="/project/evcharging">Making Electric Vehicle Charging Fun</a></h3>
           <p>
             The project aimed to create the ideal EV charging experience. The team worked with a 2023
             Mach E GT to provide a reliable and accurate assessment of whether or not chargers are working,
