--- a/project/dawgsense/index.html
+++ b/project/dawgsense/index.html
@@ -14,11 +14,11 @@
       <section id="nav-bar">
         <h1>Kevin Shao</h1>
         <nav>
-          <a href="index.html#profile-section">Home</a>
-          <a href="index.html#research">Research</a>
-          <a href="index.html#project">Project</a>
-          <a href="index.html#teaching">Teaching</a>
-          <a href="index.html#publications">Publications</a>
+          <a href="/#profile-section">Home</a>
+          <a href="/#research">Research</a>
+          <a href="/#project">Project</a>
+          <a href="/#teaching">Teaching</a>
+          <a href="/#publications">Publications</a>
         </nav>
       </section>
     </header>
