--- a/project/dawgsense/index.html
+++ b/project/dawgsense/index.html
@@ -36,10 +36,10 @@
         <a href="https://courses.cs.washington.edu/courses/cse440/24au/projects/dawgsense" class="button">Original Web Post</a>
       </div>
 
-      <img src="/dawgsense-welcome.jpg" alt="TBD">
+      <img src="/img/dawgsense-welcome.jpg" alt="TBD">
       <div class="proj2-intro">
         <h3 class="title">Introduction</h3>
-        <img src="img/project_thumb.png" alt="Logo" class="logo">
+        <img src="/img/project_thumb.png" alt="Logo" class="logo">
         <p>
           Many dog owners struggle to effectively respond to and manage their dogs' emotional and
           reactive behaviors, particularly in high-stress or unexpected situations such as barking
@@ -78,7 +78,7 @@
       <h3 class="subtitle">#1 Support In-The-Moment Response to the Crisis</h3>
       <div class="image-container">
         <figure>
-          <img src="img/T1-1.png" alt="Image 1" class="image">
+          <img src="/img/T1-1.png" alt="Image 1" class="image">
           <figcaption>
             <strong>Monitoring and Real-Time Analysis Initialization:</strong> Upon activating the monitoring
             function (AR mode), a pop-up notification “Analyzing in Real-Time” and a visual clue of the dog’s
@@ -87,7 +87,7 @@
           </figcaption>
         </figure>
         <figure>
-          <img src="img/T1-2.png" alt="Image 2" class="image">
+          <img src="/img/T1-2.png" alt="Image 2" class="image">
           <figcaption>
             <strong>Crisis Detection and Warning Message:</strong> When unusual behavior is detected, such as rapid
             tail wagging or stiff posture, the system can recognize these early warning signs and alert the user with
@@ -98,14 +98,14 @@
       </div>
       <div class="image-container">
         <figure>
-          <img src="img/T1-3.png" alt="Image 1" class="image">
+          <img src="/img/T1-3.png" alt="Image 1" class="image">
           <figcaption>
             <strong>Suggested Intervention and Crisis De-escalation:</strong> Once a crisis is confirmed,
             the system presents a series of tailored suggestions to help de-escalate the situation.
           </figcaption>
         </figure>
         <figure>
-          <img src="img/T1-4.png" alt="Image 2" class="image">
+          <img src="/img/T1-4.png" alt="Image 2" class="image">
           <figcaption>
             <strong>Post-Intervention Feedback and Confirmation:</strong> Once the suggested intervention
             is completed, the system prompts the user to evaluate their dog’s current state to adapt dynamically
@@ -117,14 +117,14 @@
       <h3 class="subtitle">#2 Practice Skills Interpreting Dog’s Emotional Triggers and Responses to Prevent Crisis from Occurring</h3>
       <div class="image-container">
         <figure>
-          <img src="img/T2-1.png" alt="Image 1" class="image">
+          <img src="/img/T2-1.png" alt="Image 1" class="image">
           <figcaption>
             <strong>Scenario Selection and Initial Setup:</strong> Upon launching the system to practice
             mode (VR mode), users can choose a crisis scenario based on previously recorded incidents.
           </figcaption>
         </figure>
         <figure>
-          <img src="img/T2-2.png" alt="Image 2" class="image">
+          <img src="/img/T2-2.png" alt="Image 2" class="image">
           <figcaption>
             <strong>Emotion and Trigger Recognition in Simulated Videos:</strong> Once a scenario is selected,
             users watch a simulated VR video of the incident, observing the dog’s behavior in real-time. The
@@ -135,7 +135,7 @@
       </div>
       <div class="image-container">
         <figure>
-          <img src="img/T2-3.png" alt="Image 1" class="image">
+          <img src="/img/T2-3.png" alt="Image 1" class="image">
           <figcaption>
             <strong>Feedback and Learning Support:</strong> After users submit their responses, the
             system provides immediate feedback, highlighting whether the correct emotion and trigger
@@ -144,7 +144,7 @@
           </figcaption>
         </figure>
         <figure>
-          <img src="img/T2-4.png" alt="Image 2" class="image">
+          <img src="/img/T2-4.png" alt="Image 2" class="image">
           <figcaption>
             <strong>Performance Report and Improvement Suggestions:</strong> At the end of the session,
             users receive a personalized report detailing their performance. The report highlights key
@@ -164,7 +164,7 @@
         insights into dog's emotional cues, behavioral management, and training needs. This approach provided
         actionable insights that informed our design decisions.
       </p>
-      <img src="img/design_insight_diagram.png" alt="Image 2" class="full">
+      <img src="/img/design_insight_diagram.png" alt="Image 2" class="full">
       <h3 class="subtitle">Real-Time Emotional Monitoring Enables Timely Interventions</h3>
       <div class="quote-card">
         <p>
