--- a/project/evcharging/index.html
+++ b/project/evcharging/index.html
@@ -31,7 +31,7 @@
         <a href="https://www.engr.washington.edu/news/article/2023-04-04/job-experience-classroom" class="button">UW ECE</a>
       </div>
 
-      <img src="img/capstone.png" alt="TBD">
+      <img src="/img/capstone.png" alt="TBD">
       <div class="proj2-intro">
         <h3 class="title">Introduction</h3>
         <!--<img src="img/project_thumb.png" alt="Logo" class="logo">-->
@@ -58,14 +58,14 @@
       </div>
 
       <h3 class="title">How Does It Work?</h3>
-      <img src="img/ev-sys-dig.png" alt="Image 2" class="full">
+      <img src="/img/ev-sys-dig.png" alt="Image 2" class="full">
       <p>
         The diagram above shows the full system design. The team used hardware that interprets firmware data of Mach-E and
         implemented Bluetooth connectivity that allows for real-time updates of charging station statistics to the cloud server.
       </p>
       <h4 class="subtitle">Hardware System Design</h4>
       <div class="image-text-container">
-        <img src="img/hardware-system.png" alt="Image 1" class="image-50">
+        <img src="/img/hardware-system.png" alt="Image 1" class="image-50">
         <div class="text-50">
           <p>
             The hardware system is made up of several modules with different functionalities, among
@@ -82,7 +82,7 @@
         </div>
       </div>
       <h4 class="subtitle">Software System Design</h4>
-      <img src="img/software-system.png" alt="Image 2" class="full">
+      <img src="/img/software-system.png" alt="Image 2" class="full">
       <p>
         The implementation of the software system is composed of four stages:
         <ul>
@@ -94,7 +94,7 @@
       </p>
       <br>
       <div class="image-text-container">
-        <img src="img/clould-computing-system.png" alt="Image 1" class="image-50">
+        <img src="/img/clould-computing-system.png" alt="Image 1" class="image-50">
         <div class="text-50">
           <p>
             The cloud computing portion of the system occurs sequentially.
@@ -115,7 +115,7 @@
       </div>
       <h4 class="subtitle">UI/UX System Design</h4>
       <div class="image-text-container">
-        <img src="img/ux-system.png" alt="Image 1" class="image-50">
+        <img src="/img/ux-system.png" alt="Image 1" class="image-50">
         <div class="text-50">
           <p>
             The UI/UX system design is composed of two subsystems. The first subsystem includes
@@ -139,11 +139,11 @@
       <p>
         The result of ML models are listed below. The performance of DC models are better than ACs’, which is caused by the lack of AC data.
       </p>
-      <img src="img/Train-result.png" alt="Image 2" class="full">
+      <img src="/img/Train-result.png" alt="Image 2" class="full">
       <p>
         As demostrated in the table below, our Azure function which receives, classifies, and returns data often completes operations in the range of 100-200 milliseconds, with the worst-case scenario cold starts taking a few seconds. This allows users to get charge time updates in real time.
       </p>
-      <img src="img/Azure-Function-performance.png" alt="Image 2" class="full">
+      <img src="/img/Azure-Function-performance.png" alt="Image 2" class="full">
       <h4 class="subtitle">UI/UX System</h4>
       <p>
         The map functionality worked as expected by showing nearby charging stations, routing the user
@@ -156,19 +156,19 @@
       </p>
       <div class="image-container">
         <figure>
-          <img src="img/cap4.png" alt="Image 1" class="image">
+          <img src="/img/cap4.png" alt="Image 1" class="image">
         </figure>
         <figure>
-          <img src="img/cap6.png" alt="Image 1" class="image">
+          <img src="/img/cap6.png" alt="Image 1" class="image">
         </figure>
         <figure>
-          <img src="img/cap7.png" alt="Image 2" class="image">
+          <img src="/img/cap7.png" alt="Image 2" class="image">
         </figure>
         <figure>
-          <img src="img/cap5.png" alt="Image 1" class="image">
+          <img src="/img/cap5.png" alt="Image 1" class="image">
         </figure>
         <figure>
-          <img src="img/cap8.png" alt="Image 2" class="image">
+          <img src="/img/cap8.png" alt="Image 2" class="image">
         </figure>
       </div>
     </section>
