--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
       </div>
       <div id="about">
         <h1>About Kevin</h1>
-        <p>
-          My name is Kevin Shao, and I am a 1st-year Ph.D. student in the Department of Electrical
-	        and Computer Engineering (ECE) at the University of Washington (UW), Seattle. I recently
-	        graduated with a master's degree from UW ECE. <br> <br>
-          Prior to that, I received my bachelor's degree with Magna Cum Laude honors in ECE from
-	        The Ohio State University (OSU), Columbus. I was also a member of the OSU Humanitarian
-	        Engineering Scholar Program. <br><br>
-          Outside of study, I love to <a href="/gallary">travel</a> to see unqiue culture and history from different
-          countries. Sketching and painting are also some great ways to make me relaxed.
+        <p id="intro">
+          My name is Kevin Shao, and I am a first-year Ph.D. student in Electrical and Computer Engineering
+          at the University of Washington, Seattle. I hold a Master's degree in Electrical and Computer
+          Engineering from the same institution, and a Bachelor's degree, with Magna Cum Laude honors,
+          from The Ohio State University, Columbus. My research focuses on human-computer interaction
+          and STEM education, with a specific focus on developing inclusive and responsible AI technologies.
+          My research aim to enhance the accessibility and provide personalized learning experience
+          for post-secondary STEM students.
+
+          <!-- Outside of study, I love to <a href="/gallary">travel</a> to see unqiue culture and history from different
+          countries. Sketching and painting are also some great ways to make me relaxed. -->
         </p>
         <hr>
         <div class="edu-interest">
