--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="profile-info">
           <h1 class="name">Kevin Shao</h1>
           <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
-          <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
+          <p class="position">1st-year PhD Student at Electrical and Computer Engineering</p>
           <p class="university"><a href="https://www.ece.uw.edu/">University of Washington</p>
             <div class="social-icons">
               <!--<a href="https://twitter.com/YourTwitterHandle" target="_blank" class="icon twitter" aria-label="Twitter"></a>-->
