--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </section>
 
     <section id="project">
-      <h2>Selected Projects (Under Construction)</h2>
+      <h2>Selected Projects</h2>
       <div class="project-card">
         <div class="project-logo">
           <img src="img/arch-chat.png" alt="TBD">
@@ -230,8 +230,8 @@
           <img src="img/nlp-bias.png" alt="TBD">
         </div>
         <div class="project-content">
-          <!--<h3><a href="/project/nlprr">Responsibility and Representation in Natural Language Processing (NLP) Data Practice</a></h3>-->
-          <h3>Responsibility and Representation in Natural Language Processing (NLP) Data Practice</h3>
+          <h3><a href="/project/nlprr">Responsibility and Representation in Natural Language Processing (NLP) Data Practice</a></h3>
+          <!--<h3>Responsibility and Representation in Natural Language Processing (NLP) Data Practice</h3>-->
           <p>
             This research study is pioneering collaborative methods to develop
             culturally competent and equitable AI solutions for AAVE speakers. This project emphasizes
