--- a/project/equityengine/index.html
+++ b/project/equityengine/index.html
@@ -30,7 +30,7 @@
         <span class="tag">Accessibility</span>
         <span class="tag">Engineering Education</span>
       </div>
-      <!--<h4>Collaborators: Fei Huang, Adam Ji, Lirong Que, Negar Torkmanzadeh</h4>
+      <h4>PIs: Professors Denise Wilson and Sep Makhsous</h4>
       <div class="buttons">
         <a href="https://courses.cs.washington.edu/courses/cse440/24au/projects/dawgsense" class="button">Original Web Post</a>
       </div>-->
