--- a/project/equityengine/index.html
+++ b/project/equityengine/index.html
@@ -31,7 +31,7 @@
         <span class="tag">Engineering Education</span>
       </div>
       <h4>PIs: Professors Denise Wilson and Sep Makhsous</h4>
-      <div class="buttons">
+      <!--<div class="buttons">
         <a href="https://courses.cs.washington.edu/courses/cse440/24au/projects/dawgsense" class="button">Original Web Post</a>
       </div>-->
 
