--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href="https://www.linkedin.com/in/kevin-shao918/" target="_blank" class="icon linkedin" aria-label="LinkedIn"></a>
               <!--<a href="https://www.facebook.com/YourFacebookProfile" target="_blank" class="icon facebook" aria-label="Facebook"></a>-->
               <!--<a href="https://www.instagram.com/YourInstagramProfile/" target="_blank" class="icon instagram" aria-label="Instagram"></a>-->
-              <a href="https://drive.google.com/file/d/1yAU4TSpVYmErheG13cLtvn90Hc76UT-m/view?usp=sharing" target="_blank" class="icon cv" aria-label="CV"></a>
+              <!--<a href="https://drive.google.com/file/d/1yAU4TSpVYmErheG13cLtvn90Hc76UT-m/view?usp=sharing" target="_blank" class="icon cv" aria-label="CV"></a>-->
             </div>
         </div>
       </div>
