--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <section id="publications">
       <div class="left-section">
-        <h2>Recent Publications</h2>
+        <h2 style="width: 276px;">Recent Publications</h2>
       </div>
       <div class="right-section">
         <ul>
@@ -333,12 +333,29 @@
     </section>
 
     <section id="talks">
-      <div class="left-section">
+      <div class="leftt-section">
         <h2>Talks & Presentations</h2>
       </div>
       <div class="right-section">
-        <h2>COMING SOON</h2>
+      <ul>
+        <li>
+          <div class="talk-card">
+            <div class="talk-content">
+              <p><strong>AI-Driven and New Technologies for Students Living with Disabilities in STEM Education</strong></p>
+              <div class="tk-subtitle">2025 The Collaborative Network for Engineering and Computing Diversity (CoNECD) Conference</div>
+              <div class="tk-datLoc">Feb 10, 2025 9:35 AM – 10:15 AM • San Antonio, Texas</div>
+              <div class="links">
+                  <a href="https://drive.google.com/file/d/1ixWpgeyqsh0637wtAuEKMy-_5JfpV1gP/view?usp=sharing">Slides</a>
+              </div>
+            </div>
+            <div class="talk-img">
+              <img src="img/conecd.png" alt="TBD">
+            </div>
+          </div>
+        </li>
+      </ul>
       </div>
+
     </section>
 
 		<footer>
