--- a/project/nlprr/index.html
+++ b/project/nlprr/index.html
@@ -76,6 +76,15 @@
         </p>
       </div>
 
+      <p>
+        Survey insights report analyzed using Power BI: <a href="https://drive.google.com/file/d/1_4t5ga2wsc0Q8o8xhSIag5Bw7ReSGCKm/view">LINK</a>
+
+     </p>
+     <h3 class="title">Publication</h3>
+     <p>
+      Jay L. Cunningham, Kevin Shao, Nathanael Elias Mengist, Rock Pang, et al. 2025. Advancing NLP Data
+      Equity: Practitioner Responsibility and Accountability in NLP Data Practices. (Under Review ACM FAccT 2025)
+     </p>
       <h3 class="title">More Info Coming Soon</h3>
 
       <!--<h3 class="title">How Does It Work?</h3>
